--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@
 --light : #F4F4FD;
 --success : #31D0AA;
 --pure-white : #FFFFFF;
+
+--tras-t-fun : cubic-bezier(0.4, 0, 0.2, 1);
 }
 body {
     font-family: 'Roboto', sans-serif;
@@ -54,7 +56,15 @@ h1,h2,h3,p,ul {
 .menu {
     display: flex;
 }
+.menu-item:not(:last-child) {
+    margin-right: 40px;
+}
+/* .menu-item + .menu-item {
+    margin-left: 20px;
+} */
+
 .menu-link {
+    position: relative;
     padding-top: 24px;
     padding-bottom: 24px;
     
@@ -63,23 +73,33 @@ h1,h2,h3,p,ul {
     line-height: 24px;
     letter-spacing: 1.5;
     color: var(--dark);
+
+    transition: color 250ms var(--tras-t-fun);
 }
 .menu-link:hover,
 .menu-link:focus {
     color: var(--primary-brand);
 }
-.menu-item:not(:last-child) {
-    margin-right: 40px;
+.menu-link::after {
+    position: absolute;
+    left: 0;
+    bottom: -2.5px;
+    content: '';
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: var(--primary-brand);
+    border-radius: 2px;
+    opacity: 0;
+    transition: opacity 250ms var(--tras-t-fun) ;
 }
-/* .menu-item + .menu-item {
-    margin-left: 20px;
-} */
+.menu-link:active:after {
+opacity: 1;
+}
+
 .menu-contacts {
     display: flex;
     margin-left: auto;
-}
-.menu-link:active {
-    color: var(--primary-brand);
 }
 .contact-phone {
     padding-top: 24px;
@@ -89,6 +109,8 @@ h1,h2,h3,p,ul {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--text-col);
+
+    transition: color 250ms var(--tras-t-fun);
 }
 .contact-phone:hover,
 .contact-phone:focus {
@@ -103,6 +125,8 @@ h1,h2,h3,p,ul {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--text-col);
+
+    transition: color 250ms var(--tras-t-fun);
 }
 .contact-mail:hover,
 .contact-mail:focus {
@@ -193,6 +217,8 @@ h1,h2,h3,p,ul {
     letter-spacing: 0.04em;
     cursor: pointer;
     text-align: center;
+
+    transition: box-shadow 250ms var(--tras-t-fun);
 }
 .btn:hover,
 .btn:focus {
@@ -226,7 +252,9 @@ h1,h2,h3,p,ul {
     align-items: center;
     letter-spacing: 0.04em;
     cursor: pointer;
-    text-align: center;  
+    text-align: center;
+
+    transition: color 250ms var(--tras-t-fun);  
 }
 .btn-filter:hover,
 .btn-filter:focus {
@@ -415,6 +443,8 @@ h1,h2,h3,p,ul {
 .list-works-item {
     box-shadow: 0px 1px 6px 0px #2E2F4214;
 
+    transition: box-shadow 250ms var(--tras-t-fun);
+
     /* outline: 1px solid red; */
 }
 .list-works-item:hover, 
@@ -500,6 +530,8 @@ h1,h2,h3,p,ul {
     border: 1px solid;
     border-color: var(--subtle-text);
     border-radius: 4px;
+
+    transition: color 250ms var(--tras-t-fun);
 }
 .customer-list-link:hover,
 .customer-list-link:focus {
@@ -537,6 +569,8 @@ color: var(--pure-white);
     height: 40px;
     background-color: var(--text-col);
     border-radius: 50%;
+
+    transition: background-color 250ms var(--tras-t-fun);
 }
 .social-media-footer-link:hover,
 .social-media-footer-link:focus {
