--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ h1,h2,h3,p,ul {
 .menu-link:focus {
     color: var(--primary-brand);
 }
-.menu-link::after {
+.current::after {
     position: absolute;
     left: 0;
     bottom: -2.5px;
@@ -90,13 +90,7 @@ h1,h2,h3,p,ul {
     height: 4px;
     background-color: var(--primary-brand);
     border-radius: 2px;
-    opacity: 0;
-    transition: opacity 250ms var(--tras-t-fun) ;
 }
-.menu-link:active:after {
-opacity: 1;
-}
-
 .menu-contacts {
     display: flex;
     margin-left: auto;
@@ -274,7 +268,7 @@ opacity: 1;
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 /* Контент */
-.hided {
+.is-hiden {
     position: absolute;
     width: 1px;
     height: 1px;
