--- a/css/styles.css
+++ b/css/styles.css
@@ -268,7 +268,7 @@ h1,h2,h3,p,ul {
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 /* Контент */
-.is-hiden {
+.hidden {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -454,6 +454,23 @@ h1,h2,h3,p,ul {
 .list-works-item:nth-last-child(-n+3) {
     margin-bottom: 0;
 }
+.thumb {
+    position: relative;
+}
+.thumb::before {
+    position: absolute;
+    display: inline-block;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #4D5AE5;
+    opacity: 0.5;
+}
+.thumb:hover::before {
+    opacity: 1;
+}
 .img {
     display: block;
 }
@@ -569,4 +586,58 @@ color: var(--pure-white);
 .social-media-footer-link:hover,
 .social-media-footer-link:focus {
     background-color: var(--success);
+}
+/* Modal window */
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(46, 47, 66, 0.4);
+    /* background-color: #8E8F99; */
+}
+.backdrop.is-hidden {
+    /* visibility: 0; */
+    opacity: 0;
+    pointer-events: none;
+}
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 408px;
+    height: 576px;
+    background: #FCFCFC;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+.modal-btn {
+    margin-left: 360px;
+    margin-top: 24px;
+    margin-right: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 24px;
+    height: 24px;
+    background-color: var(--accent);
+    border: 2px solid var(--accent);
+    border-radius: 50%;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.modal-btn:active {
+    background-color: var(--accent);
+    border-color: var(--subtle-text);
+    box-shadow: none;
+}
+.modalsvg {
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
